# fp2023

./: .gitignore  README.md  tasks.md
FSharpActivePatterns/: FSharpActivePatterns.opam  Makefile  README.md  dune-project
FSharpActivePatterns/lib/: Pprinttypedtree.ml  ast.ml  dune  errorinter.ml  errorinter.mli  inferencer.ml  inferencer.mli  interpret.ml  interpret.mli  parser.ml  parser.mli  typeandprinter.ml  typedtree.ml  typedtree.mli
FSharpActivePatterns/lib/demos/: demos.ml  demos.t  dune
FSharpActivePatterns/lib/tests/: dune  infer_tests.ml  infer_tests.mli  inter_tests.ml  pars_tests.ml  pars_tests.mli
