(library
 (name FSharpActivePatterns_lib)
 (public_name FSharpActivePatterns.Lib)
 (inline_tests)
 (modules
  Ast
  Parser
  Interpret
  Inferencer
  Typedtree
  Pprinttypedtree
  Errorinter)
 (libraries base angstrom)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx)))
