(library
 (name FSharpActivePatterns_lib)
 (public_name FSharpActivePatterns.Lib)
 (inline_tests)
 (modules Ast Parser Interpret Errorinter Typeandprinter Inferencer)
 (libraries base angstrom)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
 (instrumentation
  (backend bisect_ppx)))
